--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>tatsianavasko.github.io</h1>
+        <h1>List of useful links to test HZN app</h1>
+        <h2>HGO: Right links, wrong links, unexisted items. WEB redirect (actionable URLs)</h2>
         <p></p>
 
 
