--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p><a href="hgo://nl/home">Home</a></p>
 
 <p><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOD</h3></p>
-<p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch-trailer#0">5th Wave trailer/watch trailer type</a></p>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch-trailer#0">5th Wave trailer/watch trailer type</a>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Vicky Cristina Barcelona-my prime movie/watch type with [#offset] to</a>
 
 
