--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943009/1468332900000/watch">TV guide-replayble-ON NOW asset /watch type with [#offset] to</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943009/watch">TV guide-replayble-ON NOW asset --- shortcut for the check --- /watch type with [#offset] to</a></p>
 
-<p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942983/1468342800000/record">ON TV future</a><br></p>
-
+<p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942983/1468342800000">ON TV future</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942983/1468342800000/record">ON TV future /record</a><br></p>
 
 
 
