--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/1468389600000">TV guide-replayble-ON NOW asset</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184">TV guide-replayble-ON NOW asset---w/o TIMEstamp</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1468494000000/watch#30">TV guide-ON NOW asset-STARTOVER-with TIMEstamp</a><br>
+
 
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1468505400000">ON TV future</a><br>
 
