--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html">My prime series---+/{mediaitem}/{name} created by WEB</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the">My prime series--- shortcut for the check ---</a><br>
 
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/guardian-the.html">My prime series-SHOW TYPE-</a><br>
+
+
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000274621/marie-antoinette.html/watch-trailer#26">My prime trailer /watch type WITH [#offset] to (Marie Antoinette)</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie --- shortcut-created by WEB ---/watch type WITH [#offset] to (5th Wave, The)</a><br>
