--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">My prime movie--- shortcut-created by WEB ---/watch type WITH [#offset] to (Vicky Cristina Barcelona)</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">My prime movie--- +/{mediaitem}/{name} ---/watch type WITH [#offset] to (Vicky Cristina Barcelona)</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html/watch#249">My prime series---+/{mediaitem}/{name} created by WEB ---/watch type WITH [#offset] to</a><br>
-<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/watch#249">My prime series--- shortcut for the check ---/watch type WITH [#offset] to</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/watch#249">My prime series--- shortcut for the check ---/{mediagroup}/{name}/watch---/watch type WITH [#offset] to</a><br>
 
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html">My prime series---+/{mediaitem}/{name} created by WEB</a><br>
-<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the">My prime series--- shortcut for the check ---</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the">My prime series--- shortcut for the check-/{mediagroup}/{name}---</a><br>
 
-<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/guardian-the.html">My prime series-SHOW TYPE-</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/guardian-the.html">My prime series-SHOW TYPE-/{mediagroup}/{name}/watch-</a><br>
 
 
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000274621/marie-antoinette.html/watch-trailer#26">My prime trailer /watch type WITH [#offset] to (Marie Antoinette)</a><br></p>
@@ -59,12 +59,9 @@
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/1468389600000/watch">TV guide-replayble-ON NOW asset /watch type with [#offset] to</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/watch">TV guide-replayble-ON NOW asset --- shortcut for the check --- /watch type with [#offset] to</a></p>
 
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/1468389600000">TV guide-replayble-ON NOW asset</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184">TV guide-replayble-ON NOW asset---w/o TIMEstamp</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1468494000000/watch#30">TV guide-ON NOW asset-STARTOVER-with TIMEstamp</a><br>
-
-
-<p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1468505400000">ON TV future</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468841280000">TV guide-STARTOVER-ON NOW asset-watch</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/">TV guide-replayble-ON NOW asset---w/o TIMEstamp</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468841280000/watch">TV guide-ON NOW asset-STARTOVER-with TIMEstamp-watch</a><br>
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1468533300000/record">RECORDED---ON TV future /record</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1469433300000">ON TV future</a><br>
