--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/1468389600000/watch">TV guide-replayble-ON NOW asset /watch type with [#offset] to</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/watch">TV guide-replayble-ON NOW asset --- shortcut for the check --- /watch type with [#offset] to</a></p>
 
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468841280000">TV guide-STARTOVER-ON NOW asset-watch</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/">TV guide-replayble-ON NOW asset---w/o TIMEstamp</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468841280000">TV guide-STARTOVER-ON NOW asset</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/">TV guide-STARTOVER-ON NOW asset---w/o TIMEstamp</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468841280000/watch">TV guide-ON NOW asset-STARTOVER-with TIMEstamp-watch</a><br>
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942987/1468533300000/record">RECORDED---ON TV future /record</a><br>
