--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/1468389600000/watch">TV guide-replayble-ON NOW asset /watch type with [#offset] to</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/watch">TV guide-replayble-ON NOW asset --- shortcut for the check --- /watch type with [#offset] to</a></p>
 
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468841280000">TV guide-STARTOVER-ON NOW asset</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/">TV guide-STARTOVER-ON NOW asset---w/o TIMEstamp</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943091/1468842900000/watch">TV guide-ON NOW asset-STARTOVER-with TIMEstamp-watch</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000">TV guide-STARTOVER-ON NOW asset</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014">TV guide-STARTOVER-ON NOW asset---w/o TIMEstamp</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000/watch">TV guide-ON NOW asset-STARTOVER-with TIMEstamp-watch</a><br>
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173/1469443800000/record">RECORDED---ON TV future /record</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173/1469443800000">ON TV future</a><br>
