--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347685/knielen-op-een-bed-violen.html/watch-trailer#27">Ondemand trailer/watch type WITH offset (Knielen op een bed violen)</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html/watch#145">TV guide-replay asset --- +/{listing}/{name} created by WEB --- /watch type with [#offset] to (How I Met Your Mother)</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html/watch#145">TV guide-replay asset --- shortcut for the check --- /watch type with [#offset] to (How I Met Your Mother)</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/1468389600000/watch">TV guide-replayble-ON NOW asset /watch type with [#offset] to</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943184/watch">TV guide-replayble-ON NOW asset --- shortcut for the check --- /watch type with [#offset] to</a></p>
+<a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html/watch#145">TV guide-replay asset --- shortcut for the check --- /watch type with [#offset] to (How I Met Your Mother)</a><br></p>
 
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000">TV guide-STARTOVER-ON NOW asset</a><br>
+<p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000">TV guide-STARTOVER-ON NOW asset</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014">TV guide-STARTOVER-ON NOW asset---w/o TIMEstamp</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000/watch">TV guide-ON NOW asset-STARTOVER-with TIMEstamp-watch</a><br>
 
