--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html">My prime series---+/{mediaitem}/{name} created by WEB</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the">My prime series--- shortcut for the check-/{mediagroup}/{name}---</a><br>
 
-<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/guardian-the.html">My prime series-SHOW TYPE-/{mediagroup}/{name}/watch-</a><br>
-
-
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000274621/marie-antoinette.html/watch-trailer#26">My prime trailer /watch type WITH [#offset] to (Marie Antoinette)</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie --- shortcut-created by WEB ---/watch type WITH [#offset] to (5th Wave, The)</a><br>
@@ -62,7 +59,57 @@
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000/watch">TV guide-ON NOW asset-STARTOVER-with TIMEstamp-watch</a><br>
 
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173/1469443800000/record">RECORDED---ON TV future /record</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173/1469443800000">ON TV future</a><br>
+<a href="https:/
+
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
+53
+54
+55
+56
+57
+58
+59
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages</h3>
+<p><a href="hgo://nl/home">Home</a></p>
+<p><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOD</h3></p>
+<p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">My prime movie--- shortcut-created by WEB ---/watch type WITH [#offset] to (Vicky Cristina Barcelona)</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">My prime movie--- +/{mediaitem}/{name} ---/watch type WITH [#offset] to (Vicky Cristina Barcelona)</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html/watch#249">My prime series---+/{mediaitem}/{name} created by WEB ---/watch type WITH [#offset] to</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/watch#249">My prime series--- shortcut for the check ---/{mediagroup}/{name}/watch---/watch type WITH [#offset] to</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html">My prime series---+/{mediaitem}/{name} created by WEB</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the">My prime series--- shortcut for the check-/{mediagroup}/{name}---</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/guardian-the.html">My prime series-SHOW TYPE-/{mediagroup}/{name}/watch-</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000274621/marie-antoinette.html/watch-trailer#26">My prime trailer /watch type WITH [#offset] to (Marie Antoinette)</a><br></p>
+<p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie --- shortcut-created by WEB ---/watch type WITH [#offset] to (5th Wave, The)</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie --- +/{mediaitem}/{name} ---/watch type WITH [#offset] to (5th Wave, The)</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch-trailer#0">Ondemand trailer/watch type without offset (5th Wave)</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347685/knielen-op-een-bed-violen.html/watch-trailer#27">Ondemand trailer/watch type WITH offset (Knielen op een bed violen)</a><br></p>
+<p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html/watch#145">TV guide-replay asset --- +/{listing}/{name} created by WEB --- /watch type with [#offset] to (How I Met Your Mother)</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html/watch#145">TV guide-replay asset --- shortcut for the check --- /watch type with [#offset] to (How I Met Your Mother)</a><br></p>
+@TatsianaVasko
+Commit changes/www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173/1469443800000">ON TV future</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173">ON TV future w/o time stamp</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000338065/star-wars-the-force-awakens.html/watch-trailer">trailer from ticket</a><br>
