--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 <p><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOD</h3></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
-<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/{name}/watch</a><br>
-<a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html/watch#249">Movie-{my-prime}/{type}/{mediagroup}/{name}/watch</a><br></p>
+<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/{name}/watch</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html">My prime series-/{mediagroup}/{name}</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F065572c2-b4b3-40ad-8aff-7862735c6f35/guardian-the/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA1000000000291987/pilot.html/watch#249">My prime series-/{mediagroup}/{name}/watch</a><br>
