--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOD</h3></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
-<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html">Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
+<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html">Movie-{my-prime}/{type}/{mediagroup}</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/{name}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html">Movie-{my-prime}/{type}/{mediagroup}/{name}</a><br></p>
 
