--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173/1469443800000">ON TV future</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/672816167173">ON TV future w/o time stamp</a><br></p>
 
+<p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942983/1468941000000/record">RECORDED-ON TV future /record</a><br></p>
+
+
 
 
 
