--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html/watch#145">/{tv-guide}/replay-asset.html/{mediagroup}/{name}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html">/{tv-guide}/replay-asset.html/{mediagroup}/{name}</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html/watch#145">/{tv-guide}/replay-asset.html/{mediagroup}/watch</a><br>
+<a The newest episode of the replay asset starts playing</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html">/{tv-guide}/replay-asset.html/{mediagroup}</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443943014/1468844460000">TV guide-STARTOVER-ON NOW asset</a><br>
