--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html/watch#145">/{tv-guide}/replay-asset.html/{mediagroup}/{name}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html">/{tv-guide}/replay-asset.html/{mediagroup}/{name}</a><br>
-<a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html/watch#145">/{tv-guide}/replay-asset.html/{mediagroup}/watch</a><br>
+<a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html/watch#145">/{tv-guide}/replay-asset.html/{mediagroup}/watch</a>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The newest episode of the replay asset starts playing</h5><br>
 
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother.html">/{tv-guide}/replay-asset.html/{mediagroup}</a><br></p>
