--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000274621/marie-antoinette.html/watch-trailer#26">My prime trailer /watch type WITH [#offset] to (Marie Antoinette)</a><br></p>
 
-<p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie --- shortcut-created by WEB ---/watch type WITH [#offset] to (5th Wave, The)</a><br>
-<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie --- +/{mediaitem}/{name} ---/watch type WITH [#offset] to (5th Wave, The)</a><br>
-<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch-trailer#0">Ondemand trailer/watch type without offset (5th Wave)</a><br>
-<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347685/knielen-op-een-bed-violen.html/watch-trailer#27">Ondemand trailer/watch type WITH offset (Knielen op een bed violen)</a><br></p>
+<p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie /{ondemand}/{type}/{mediagroup}/{name}/watch</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html">On demand movie /{ondemand}/{type}/{mediagroup}/{name}</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch#295">On demand movie {ondemand}/{type}/{mediagroup}/{name}/{mediaitem}/{name}/watch</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html">On demand movie {ondemand}/{type}/{mediagroup}/{name}/{mediaitem}/{name}</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347665/5th-wave-the.html/watch-trailer#0">{ondemand}/{type}/{mediagroup}/{name}/{mediaitem}/{name}/watch-trailer</a><br>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347685/knielen-op-een-bed-violen.html/watch-trailer#27">{ondemand}/{type}/{mediagroup}/{name}/{mediaitem}/{name}/watch-trailer#27</a><br></p>
 
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html/watch#145">/{tv-guide}/replay-asset.html/{mediagroup}/{name}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000067BC/how-i-met-your-mother/crid%3A~~2F~~2Fbds.tv~~2F6022242-imi%3A00100000006ADFD5/game-night.html">/{tv-guide}/replay-asset.html/{mediagroup}/{name}</a><br>
