--- a/index.html
+++ b/index.html
@@ -72,10 +72,6 @@
 
 <p><a href="https://www.horizon.tv/nl_nl/tv-kijken/live-channel.html/24443942983/1468941000000/record">RECORDED-ON TV future /record</a><br></p>
 
-
-
-
-
 <p><a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000338065/star-wars-the-force-awakens.html/watch-trailer">trailer from ticket</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347701/lady-in-the-van-the.html/watch-trailer#0">trailer1 from the beginning</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347701/lady-in-the-van-the.html/watch-trailer#57">trailer1 with offset</a><br>
@@ -88,7 +84,37 @@
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347707/pride-and-prejudice-and-zombies.html/watch-trailer#0">trailer5 from the beginning</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347707/pride-and-prejudice-and-zombies.html/watch-trailer#69">trailer5 with offset</a><br></p>
 
+<p>
+   <h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for HZN app</h2>
+<a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a>
+</p>
+  
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BRANDED app</h3>
+<h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile Deeplinking for branded app</h2>
 
+<p>
+   <a href="ziggogo://nl/home">Home Page NL</a>
+  <a href="ziggogo://nl/tvguide">TV-Guide Page</a>
+  <a href="ziggogo://nl/watchtv">WatchTV Page</a>
+  <a href="ziggogo://nl/myprime">Myprime Page</a>
+  <a href="ziggogo://nl/ondemand">Ondemand Page</a>
+  <a href="ziggogo://nl/myvideos">Myvideos Page</a>
+</p>
+<p>
+  <h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wrong pages</h2>
+  <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a>
+  <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a>
+</p>
+
+<p>
+   <h2>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for branded app</h2>
+<a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL---for HZN app---Zigogo.tv site is not ready yet-new zigogo https deeplink should be inserted here</a>
+</p>
 
 
 
