--- a/index.html
+++ b/index.html
@@ -96,18 +96,18 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mobile Deeplinking for branded app</h4>
 
 <p>
-   <a href="ziggogo://nl/home">Home Page NL</a>
-  <a href="ziggogo://nl/tvguide">TV-Guide Page</a>
-  <a href="ziggogo://nl/watchtv">WatchTV Page</a>
-  <a href="ziggogo://nl/myprime">Myprime Page</a>
-  <a href="ziggogo://nl/ondemand">Ondemand Page</a>
-  <a href="ziggogo://nl/myvideos">Myvideos Page</a>
+   <a href="ziggogo://nl/home">Home Page NL</a><br>
+  <a href="ziggogo://nl/tvguide">TV-Guide Page</a><br>
+  <a href="ziggogo://nl/watchtv">WatchTV Page</a><br>
+  <a href="ziggogo://nl/myprime">Myprime Page</a><br>
+  <a href="ziggogo://nl/ondemand">Ondemand Page</a><br>
+  <a href="ziggogo://nl/myvideos">Myvideos Page</a><br>
 </p>
 <p>
   <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wrong pages</h4>
-  <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a>
-  <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a>
+  <a href="ziggogo://nl/hame">Hame Page-incorrect adress</a><br>
+  <a href="ziggogo://nl/fjg">fjg Page-incorrect adress</a><br>
 </p>
 
 <p>
