--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages</h3>
-
 <p><a href="hgo://nl/home">Home</a></p>
 
-<p><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VOD</h3></p>
+<p>
+<h4>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear</h4>
+</p>
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html">Movie-{my-prime}/{type}/{mediagroup}</a><br>
