--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <p>
    <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for HZN app</h4>
-<a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a>
-<a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime NL/Survival of the Dead</a>
+<a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a></p>
+<p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime NL/Survival of the Dead</a>
 </p>
   
 <h3>
