--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <p>
    <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for branded app</h4>
-<a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL---for HZN app---Zigogo.tv site is not ready yet-new zigogo https deeplink should be inserted here</a>
+<a href="https://www.zigogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F569a2fd0-3c2b-465c-b96e-8fc69d5f18ff/sequestered-s01/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000268319/sequestered-s01.html">My prime NL/Sequestered-Zigogo.tv</a>
 </p>
 
 
