--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages</h3>
 <p><a href="hgo://nl/home">Home</a></p>
+<p><a href="hgo://nl">without Home</a></p>    
 
 <p>
 <h4>
