--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages: hgo</h3>
 <p><a href="hgo://nl/home">Home</a></p>
 <p><a href="hgo://nl">without Home</a></p>    
 
@@ -107,6 +107,8 @@
   <a href="ziggogo://nl/myprime">Myprime Page</a><br>
   <a href="ziggogo://nl/ondemand">Ondemand Page</a><br>
   <a href="ziggogo://nl/myvideos">Myvideos Page</a><br>
+  <a href="ziggogo://nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000257772/2033-hd/crid%3A~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000257772/2033-hd">Myprime/film/2033</a><br>
+  <a href="ziggogo://nl/tv-gids/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-0000000065F5/Sesamstraat/crid%3A~~2F~~2Fbds.tv~~2F217769964-imi%3A00100000007B040C/Sesamstraat">TV item</a><br>
 </p>
 <p>
   <h4>
@@ -117,8 +119,8 @@
 
 <p>
    <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for branded app</h4>
-<a href="https://www.zigogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F569a2fd0-3c2b-465c-b96e-8fc69d5f18ff/sequestered-s01/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000268319/sequestered-s01.html">My prime NL/Sequestered-Zigogo.tv</a>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for branded app https://www.ziggogo.tv</h4>
+<a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">My prime/nl/Teenage Mutant Ninja Turtles</a>
 </p>
 
 
