--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 <p></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages: hgo</h3>
-<p><a href="hgo://nl/home">Home</a></p>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Landing pages. Deeplinking: hgo</h3>
+<p><a href="hgo://nl/home">Home-NL</a></p>
+<p><a href="hgo://ch/home">Home-CH</a></p>    
+<p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">My prime item-CH</a></p>
 <p><a href="hgo://nl">without Home</a></p>    
 
 <p>
