--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 <p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">My prime item-CH</a></p>
 <p><a href="hgo://nl">without Home</a></p>    
 
+<p><h3><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Deeplinking</h3></p>
 <p>
 <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Items: VOD and linear</h4>
 </p>
+
 
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html/watch#182">Movie-{my-prime}/{type}/{mediagroup}/watch</a><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000260600/vicky-cristina-barcelona-hd.html">Movie-{my-prime}/{type}/{mediagroup}</a><br>
@@ -91,11 +93,12 @@
 
 <p>
    <h4>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> Deeplinking for HZN app</h4></p>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Different countries</h4></p>
+
 <p><a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime NL/Survival of the Dead</a></p>
 <p><a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">My prime DE/Survival of the Dead</a></p>
-
+<p><a href="https://www.horizon.tv/en_ch/my-prime.html">My prime CH</a></p>
   
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>BRANDED app</h3>
